--- a/src/modals.css
+++ b/src/modals.css
@@ -1,32 +1,74 @@
+/* Define animation that goes from top to bottom */
+@keyframes slideDown {
+    0% {
+        transform: translate(-50%, -150%);
+    }
+    100% {
+        transform: translate(-50%, -50%);
+    }
+}
+
+/*@keyframes slideUp {*/
+/*    0% {*/
+/*        transform: translate(-50%, -50%);*/
+/*        display: block;*/
+/*    }*/
+/*    100% {*/
+/*        transform: translate(-50%, -0%);*/
+/*        display: block;*/
+/*    }*/
+/*}*/
+
 .popup-modal {
     position: fixed;
     z-index: 15;
     top: 50%;
     left: 50%;
+    /*transform: translate(-50%, -150%);*/
     transform: translate(-50%, -50%);
-    width: 50rem;
     background: var(--primary);
     display: none;
     color: white;
     padding: 1rem 2rem;
     border-radius: 1rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+    /*animation: slideUp 0.5s ease-in-out;*/
+}
+
+.driver-modal {
+    width: 50rem;
+    z-index: 15;
+}
+
+.delete-event-modal, .delete-time-modal {
+    width: 20rem;
+    z-index: 20;
+}
+
+.delete-event-modal {
+    width: 30rem;
 }
 
 .modal-visible {
     display: block;
+    animation: slideDown ease 0.5s;
 }
 
-.popup-modal * {
+.popup-modal *{
     background: inherit;
 }
 
 .popup-modal h1 {
-    color: white;
+    /*color: white;*/
     margin-bottom: 4rem;
 }
 
+/*.modal-delete-close:before {*/
+/*    cursor: pointer;*/
+/*    pointer-events: all;*/
+/*}*/
 
-.modal-close {
+.modal-driver-close, .modal-delete-event-close, .modal-delete-time-close {
     position: absolute;
     top: 1rem;
     right: 1rem;
@@ -36,13 +78,14 @@
     color: var(--accent-primary);
     background: none;
     transition:  all ease 0.3s;
+    /*pointer-events: none;*/
 }
 
-.modal-close:hover {
+.modal-close:hover, .modal-delete-event-close:hover, .modal-delete-time-close:hover {
     filter: drop-shadow(0 0 5px var(--accent-primary));
 }
 
-.blackened {
+.blackened, .blackened2 {
     background: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
@@ -54,7 +97,19 @@
     backdrop-filter: blur(5px);
 }
 
-.blackened-visible {
+.blur {
+    background: rgba(0, 0, 0, 0);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 16;
+    display: none;
+    backdrop-filter: blur(5px);
+}
+
+.blackened-visible, .blur-visible {
     display: block;
 }
 
@@ -101,4 +156,15 @@
 
 .editable:focus, .editable:focus-visible {
     outline: none;
+}
+
+#confirm-delete-time-btn, #confirm-delete-event-btn {
+    background: linear-gradient(to bottom right, var(--accent-primary), var(--accent-secondary));
+}
+
+.btn-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
 }
