--- a/src/styles.css
+++ b/src/styles.css
@@ -579,7 +579,7 @@ input[type=number]::-webkit-inner-spin-button {
 
 .title-invalid::after  {
     color: var(--text);
-    content: "Minimum de 5 caractères";
+    content: "Minimum 5 characters";
 }
 
 .event-title-container{
